[tool.poetry]
name = "monad-std"
version = "0.1.1"
description = "A library of rust-styled monad utils for python."
authors = ["Embers-of-the-Fire <stellarishs@163.com>"]
homepage = "https://embers-of-the-fire.github.io/monad-std/"
repository = "https://github.com/Embers-of-the-Fire/monad-std"
keywords = ["monad", "functional", "rust", "pure-python", "fp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
include = [
    "monad_std/**/*",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "poetry.lock",
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.2.3"
funct = "^0.9.2"
pytest = "^7.4.0"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
# mkdocs-git-committers-plugin-2 = "^1.1.2"
# mkdocs-git-authors-plugin = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning",
]

